--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2d06a20
+	base = a7b1301
 	trimbase = 
 	parent = release/indigo/turtlebot_exploration_3d
-	previous = 
+	previous = 2d06a20
