--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ee4a2f8
+	base = 3a7db06
 	trimbase = 
 	parent = debian/indigo/turtlebot_exploration_3d
-	previous = 
+	previous = ee4a2f8
