--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ff1cfa1
+	base = 0b19055
 	trimbase = 
 	parent = rpm/indigo/turtlebot_exploration_3d
-	previous = 
+	previous = ff1cfa1
