Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.5-0": ["Wed Dec 21 2016", "Bona", "baishi.bona@gmail.com"], "0.0.3-0": ["Tue Dec 20 2016", "Bona", "baishi.bona@gmail.com"], "0.0.4-0": ["Tue Dec 20 2016", "Bona", "baishi.bona@gmail.com"]}
+{"0.0.5-0": ["Wed Dec 21 2016", "Bona", "baishi.bona@gmail.com"], "0.0.6-0": ["Thu Dec 29 2016", "Bona", "baishi.bona@gmail.com"], "0.0.3-0": ["Tue Dec 20 2016", "Bona", "baishi.bona@gmail.com"], "0.0.4-0": ["Tue Dec 20 2016", "Bona", "baishi.bona@gmail.com"]}
