Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.0.5": ["Bona", "baishi.bona@gmail.com"], "0.0.4": ["Bona", "baishi.bona@gmail.com"], "0.0.7": ["Bona", "baishi.bona@gmail.com"], "0.0.6": ["Bona", "baishi.bona@gmail.com"], "0.0.3": ["Bona", "baishi.bona@gmail.com"], "0.0.2": ["Bona", "baishi.bona@gmail.com"]}
+{"0.0.5": ["Bona", "baishi.bona@gmail.com"], "0.0.4": ["Bona", "baishi.bona@gmail.com"], "0.0.7": ["Bona", "baishi.bona@gmail.com"], "0.0.6": ["Bona", "baishi.bona@gmail.com"], "0.0.3": ["Bona", "baishi.bona@gmail.com"], "0.0.2": ["Bona", "baishi.bona@gmail.com"], "0.0.8": ["Bona", "baishi.bona@gmail.com"]}
